kubernetes/apps/domain-locker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: domain-locker
    app.kubernetes.io/name: domain-locker
  name: domain-locker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domain-locker
      app.kubernetes.io/name: domain-locker
  template:
    metadata:
      labels:
        app: domain-locker
        app.kubernetes.io/name: domain-locker
    spec:
      containers:
      - image: ghcr.io/alafranque/domain-locker:latest
        ports:
          - containerPort: 8080
            name: http
        imagePullPolicy: IfNotPresent
        name: domain-locker
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
