kubernetes/apps/domain-locker/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: domain-locker
  name: domain-locker
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: domain-locker
  type: ClusterIP
